--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   
 
   <div class="skill">
-    <span class="h6">Sql</span>
+    <span class="h6">MySql</span>
     <div class="progress">
       <div class="progress-bar bg-blue" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
